@@ -1,3 +1,8 @@
+2006-12-03 Added LogNorm to colors.py as illustrated by
+           examples/pcolor_log.py, based on suggestion by
+           Jim McDonald.  Colorbar modified to handle LogNorm.
+           Norms have additional "inverse" method. - EF
+
 2006-12-02 Changed class names in colors.py to match convention:
            normalize -> Normalize, no_norm -> NoNorm.  Old names
            are still available.
